--- a/src/app/todoapp/components/todo-text.scss
+++ b/src/app/todoapp/components/todo-text.scss
@@ -1,5 +1,30 @@
-.todo-text-display .readonly-todo {
-    display: block;
+.todo-text-display {
+    .readonly-todo {
+        display: block;
+    }
+
+    .readonly-todo {
+        &:hover {
+            .todo-text-edit {
+                display: inline-block;
+            }
+        }
+    }
+
+    .edit-todo {
+        display: none;
+    }
+
+    &.edit-active {
+        .readonly-todo {
+            display: none;
+        }
+
+        .edit-todo {
+            display: block;
+        }
+    }
+
 }
 
 .todo-text-edit {
@@ -8,24 +33,6 @@
     display: none;
 }
 
-.todo-text-display .readonly-todo:hover .todo-text-edit {
-    display: inline-block;
-}
-
 .todo-text-save {
-    position: absolute;
-    right: 0;
     cursor: pointer;
-}
-
-.todo-text-display .edit-todo {
-    display: none;
-}
-
-.todo-text-display.edit-active .readonly-todo {
-    display: none;
-}
-
-.todo-text-display.edit-active .edit-todo {
-    display: block;
 }
