--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,6 +1,7 @@
 $fa-font-path: '~font-awesome/fonts';
 @import '~font-awesome/scss/font-awesome.scss';
 @import './icomoon';
+@import "~bootstrap/scss/bootstrap";
 
 body {
     padding: 50px;
