--- a/src/app/todoapp/components/todo-text.scss
+++ b/src/app/todoapp/components/todo-text.scss
@@ -13,6 +13,10 @@
 
     .edit-todo {
         display: none;
+        .todo-input {
+            display: inline-block;
+            width: 80%;
+        }
     }
 
     &.edit-active {
